tests/snapshots/run_wpt_conformance__onnx_clamp_float32_4D_tensor_default_options_maxValue_and_specified_negative_options_minValue.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp float32 4D tensor default options.maxValue and specified negative options.minValue",
    "onnx",
    "PASS",
)
