tests/snapshots/run_wpt_conformance__onnx_clamp_uint32_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp uint32 1D tensor",
    "onnx",
    "PASS",
)
