tests/snapshots/run_wpt_conformance__onnx_clamp_uint64_1D_tensor_with_bigint_max.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp uint64 1D tensor with bigint max",
    "onnx",
    "PASS",
)
